# compareImg

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  tddFuncs.cpp
test/: CMakeLists.txt  test.cpp
test/include/: compare-img.hpp
