cmake_minimum_required(VERSION 3.14)
project(test)
set(CMAKE_CXX_STANDARD 14)
# link_directories(${CMAKE_CURRENT_LIST_DIR}/lib)
add_library(compare-img SHARED IMPORTED )
set_target_properties(compare-img PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/lib/libcompare-img.so )
# include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(test test.cpp)
target_include_directories(test PUBLIC include)
target_link_libraries(test compare-img)